--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/search.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/search.jspx
@@ -31,19 +31,13 @@
 			<nav:breadcrumbs>
 				<jsp:attribute name="crumbs">
 					<nav:admin />
-					<nav:crumb nameKey="navi.admin.lucene" active="true" />
+					<nav:crumb nameKey="navi.admin.fulltextsearch" active="true" />
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
 
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.admin">
-				<jsp:attribute name="pathPart">
-					<li>
-						:: <a rel="path_menu" href="${relativeUrlGenerator.getAdminUrlByName('lucene')}">Lucene</a>
-					</li>
-				</jsp:attribute>
-			</parts:search>
+			<!-- TODO: remove -->
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
