--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -116,6 +116,7 @@ ul.dropdown-menu.list-options > li > span {
 #logo {
 	font-family: Arial, 'sans-serif';
 	margin-top: 30px;
+	color: @main-color;
 }
 
 #logo h1,
