--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -1,43 +1,7 @@
-/**
- * BibSonomy Color Theme: 
- * https://kuler.adobe.com/BibSonomy-color-theme-3814695
- */
 /** BOOTSTRAP FILE */
 @import "../bootstrap/less/bootstrap.less";
 
-@main-color: #006699;
-
-@main-color-light: #428BCA;
-
-@primary-color: @main-color;
-
-@link-color: @main-color;
-@link-hover-color: @main-color;
-
-@font-color: #333333;
-
-@sidebar-color: #9EC4D9;
-
-@background-color: #EDEDED;
-
-@border-color: #cbcbcb;
-
-@menu-link-color: #EFEFEF;
-
-@light-element-color: @border-color;
-
-@light-element-hover-color: #777;
-
-@light-grey: #DFDFDF;
-
-@light-border-color: #DDDDDD;
-
-@sidebar-color: #d2d7f9;
-
-@container-navi-border: #005588;
-
-/** SMALL FONT SIZE */
-@small-font-size: 12px;
+@import "bootstrap-color.less";
 
 /** currently not used */
 @import "bootstrap-tagsinput.less";
